import React from "react";
import { render } from "@testing-library/react-native";
import { ChemicalFormula } from "../ChemicalFormula";

describe("ChemicalFormula", () => {
  it("matches snapshot", () => {
    const { toJSON } = render(<ChemicalFormula formula="H2O" />);
    expect(toJSON()).toMatchSnapshot();
  });

  it("renders a formula with numbers using subscript style for numbers", () => {
    const { getByText } = render(<ChemicalFormula formula="H2O" />);
    expect(getByText("H")).toBeTruthy();
    expect(getByText("O")).toBeTruthy();

    const numberNode = getByText("2");
    expect(numberNode).toBeTruthy();

    // The number should have the subscript style
    expect(numberNode.props.style).toEqual(
      expect.arrayContaining([
        expect.objectContaining({
          textAlignVertical: "bottom",
        }),
      ]),
    );
  });

  it("renders a formula without numbers", () => {
    const { getByText } = render(<ChemicalFormula formula="NaCl" />);
    expect(getByText("NaCl")).toBeTruthy();
  });

  it("handles empty formula string", () => {
    const { toJSON } = render(<ChemicalFormula formula="" />);
    expect(toJSON()).toMatchSnapshot();
  });

  it("renders a formula with only numbers", () => {
    const { getByText } = render(<ChemicalFormula formula="123" />);
    const node = getByText("123");
    expect(node).toBeTruthy();
    // In dynamic scaling, style might be an array or object containing scaled values
    const style = Array.isArray(node.props.style)
      ? node.props.style.flat()
      : [node.props.style];
    expect(
      style.some((s: any) => s && typeof s.fontSize === "number"),
    ).toBeTruthy();
  });

  it("renders a very long formula", () => {
    const formula = "C20H24N2O2";
    const { getByText, getAllByText } = render(
      <ChemicalFormula formula={formula} />,
    );
    expect(getByText("C")).toBeTruthy();
    expect(getByText("20")).toBeTruthy();
    expect(getByText("H")).toBeTruthy();
    expect(getByText("24")).toBeTruthy();
    expect(getByText("N")).toBeTruthy();
    expect(getAllByText("2").length).toBe(2);
    expect(getByText("O")).toBeTruthy();
  });
});
