// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChemicalFormula handles empty formula string 1`] = `
<Text
  style={
    [
      {
        "color": "#FFF",
        "fontWeight": "700",
      },
      {
        "fontSize": 23,
      },
    ]
  }
/>
`;

exports[`ChemicalFormula matches snapshot 1`] = `
<Text
  style={
    [
      {
        "color": "#FFF",
        "fontWeight": "700",
      },
      {
        "fontSize": 23,
      },
    ]
  }
>
  <Text>
    H
  </Text>
  <Text
    style={
      [
        {
          "textAlignVertical": "bottom",
        },
        {
          "fontSize": 17,
          "lineHeight": 26,
        },
      ]
    }
  >
    2
  </Text>
  <Text>
    O
  </Text>
</Text>
`;
